@@ -459,6 +459,20 @@ namespace tgui
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+    std::size_t Gui::moveWidgetForward(const Widget::Ptr& widget)
+    {
+        return m_container->moveWidgetForward(widget);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    std::size_t Gui::moveWidgetBackward(const Widget::Ptr& widget)
+    {
+        return m_container->moveWidgetBackward(widget);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
     void Gui::uncheckRadioButtons()
     {
         m_container->uncheckRadioButtons();
