@@ -1,6 +1,7 @@
 TGUI 0.8.8  (20 June 2020)
 --------------------------
 
+- Added moveWidgetForward/moveWidgetBackward to Container to move widget one step in z-order
 - Added parameter to focusNextWidget/focusPreviousWidget in Container to not look recursively
 - Added enableSkipDrawingWidgetsOutsideView() to ScrollablePanel to enable optimization
 - Tabs::remove didn't recalculate the tabs width
